k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: quarkus-demo
